force-app/main/default/objects/b8log_Integration_Log__c/b8log_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>b8log Integration Log</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{0000000000}</displayFormat>
        <label>b8log Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>