force-app/main/default/objects/b8log_Integration_Log__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>