force-app/main/default/objects/b8log_Integration_Log__c/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <label>Interface Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>