force-app/main/default/objects/b8log_Integration_Log__c/fields/Interface_Sub_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Sub_Name__c</fullName>
    <label>Interface Sub Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>