force-app/main/default/objects/b8log_Integration_Log__c/fields/Next_Retry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_DateTime__c</fullName>
    <label>Next Retry DateTime</label>
    <type>DateTime</type>
</CustomField>