force-app/main/default/objects/b8log_Integration_Log__c/fields/Number_Of_Retry__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Retry__c</fullName>
    <label>Number Of Retry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>