force-app/main/default/objects/b8log_Integration_Log__c/fields/Reference_Info__c.field-meta.xml
<CustomField>
    <fullName>Reference_Info__c</fullName>
    <label>Reference Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>