force-app/main/default/objects/b8log_Integration_Log__c/fields/Request_Data_Model_Class__c.field-meta.xml
<CustomField>
    <fullName>Request_Data_Model_Class__c</fullName>
    <label>Request Data Model Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>