force-app/main/default/objects/b8log_Integration_Log__c/fields/Request_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Store_Type__c</fullName>
    <label>Request Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>